[tool.poetry]
name = "sphinx-escad-docs"
version = "0.1.0"
description = "A Sphinx extension to create pdf-documents with ESCAD templates"
authors = ["heubuchm <martin.heubuch@escad.de>"]
readme = "README.rst"

packages = [
    {include = "sphinx_escaddocs"},
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
Sphinx = ">=6.0"
weasyprint = "^61.0"
libsass = "^0.22.0"
beautifulsoup4 = "^4.12.3"
typing-extensions = "^4.8.0"
setuptools = "^68.2.2"
pytest-regressions = "^2.5.0"
pydata-sphinx-theme = "^0.14.3"
sphinxcontrib-plantuml = "^0.27"
sphinx-needs = "^1.3.0"
sphinx-autobuild = "^2021.3.14"
myst-parser = "^2.0.0"
sphinx-copybutton = "^0.5.2"
python-dotenv = "^1.0.1"
sphinx-book-theme = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
